fix(calendar): fixed day width on mobile

--- a/src/app/components/calendar/calendar.component.scss
+++ b/src/app/components/calendar/calendar.component.scss
@@ -10,6 +10,7 @@
             height: 50vh;
             min-height: 400px;
             width: 90vw;
+            max-width: 90vw;
             margin-left: auto;
             margin-right: auto;
 
